Add presets for major AI coding CLI tools
- Add Gemini CLI (Google's free AI assistant)
- Add GitHub Copilot CLI
- Add OpenHands (open source)
- Update README with better positioning for AI-driven coding workflows
- Improve preset descriptions with tool details

--- a/package.json
+++ b/package.json
@@ -78,12 +78,18 @@
             "none",
             "claude-code",
             "aider",
+            "gemini-cli",
+            "github-copilot",
+            "openhands",
             "custom"
           ],
           "enumDescriptions": [
             "Plain terminal, no auto-launch",
-            "Auto-launch Claude Code",
-            "Auto-launch Aider",
+            "Auto-launch Claude Code (Anthropic)",
+            "Auto-launch Aider (AI pair programming with Git)",
+            "Auto-launch Gemini CLI (Google's free AI assistant)",
+            "Auto-launch GitHub Copilot CLI",
+            "Auto-launch OpenHands (open source)",
             "Custom command (configure below)"
           ],
           "default": "none",
