Add extension icon: 2x2 grid with terminal prompts
- SVG icon showing grid layout with > symbols
- Uses PolicyEngine brand colors (teal and blue)
- Clean, recognizable design for marketplace

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Terminal grid management with keyboard shortcuts and optional auto-launch for CLI tools (Claude Code, Aider, Codex, etc)",
   "version": "0.1.0",
   "publisher": "maxghenis",
+  "icon": "icon.svg",
   "engines": {
     "vscode": "^1.80.0"
   },
