--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
             "Auto-launch Aider (AI pair programming with Git)",
             "Auto-launch Gemini CLI (Google's free AI assistant)",
             "Auto-launch GitHub Copilot CLI",
-            "Auto-launch Codex CLI (OpenAI's GPT-5-Codex)",
+            "Auto-launch Codex CLI (OpenAI)",
             "Auto-launch OpenHands (open source)",
             "Custom command (configure below)"
           ],
