Reorder presets by popularity
Based on market data:
1. GitHub Copilot CLI - 20M+ users, 90% of Fortune 100
2. Claude Code - Most popular at Anthropic, power users
3. Codex CLI - OpenAI brand, released 2025
4. Aider - Established open source
5. Gemini CLI - Google's free offering
6. OpenHands - Smaller community

Updated all references (extension.ts, package.json, README)

--- a/package.json
+++ b/package.json
@@ -77,21 +77,21 @@
           "type": "string",
           "enum": [
             "none",
+            "github-copilot",
             "claude-code",
+            "codex",
             "aider",
             "gemini-cli",
-            "github-copilot",
-            "codex",
             "openhands",
             "custom"
           ],
           "enumDescriptions": [
             "Plain terminal, no auto-launch",
+            "Auto-launch GitHub Copilot CLI (20M+ users)",
             "Auto-launch Claude Code (Anthropic)",
+            "Auto-launch Codex CLI (OpenAI)",
             "Auto-launch Aider (AI pair programming with Git)",
             "Auto-launch Gemini CLI (Google's free AI assistant)",
-            "Auto-launch GitHub Copilot CLI",
-            "Auto-launch Codex CLI (OpenAI)",
             "Auto-launch OpenHands (open source)",
             "Custom command (configure below)"
           ],
