Make Claude Code --dangerously-skip-permissions optional
- Add terminalgrid.claudeCode.skipPermissions setting (default: false)
- Users can enable if they want to skip permission prompts
- Safer default for general audience
- Power users can still enable in settings
- Updated documentation with clear warnings

This respects that not everyone wants to skip permissions,
and allows users to wrap claude in their own scripts if preferred.

--- a/package.json
+++ b/package.json
@@ -108,6 +108,11 @@
           "default": "",
           "description": "Arguments for custom command (e.g., '--dangerously-skip-permissions' for Claude Code)"
         },
+        "terminalgrid.claudeCode.skipPermissions": {
+          "type": "boolean",
+          "default": false,
+          "description": "Launch Claude Code with --dangerously-skip-permissions flag (only use in trusted workspaces)"
+        },
         "terminalgrid.autoConfigureOnInstall": {
           "type": "boolean",
           "default": true,
