Refactor to general presetArgs approach
Replace Claude-specific skipPermissions setting with flexible presetArgs:

Before (limited):
  terminalgrid.claudeCode.skipPermissions: true

After (flexible):
  terminalgrid.presetArgs: {
    "claude-code": "--dangerously-skip-permissions",
    "aider": "--auto-commits --no-git",
    "codex": "--model gpt-4"
  }

Benefits:
- Works for ANY preset, not just Claude Code
- Power users can customize all tool flags
- Cleaner than separate settings per tool
- Extensible to future presets

Users can still wrap tools in bash scripts if they prefer.

--- a/package.json
+++ b/package.json
@@ -108,10 +108,13 @@
           "default": "",
           "description": "Arguments for custom command (e.g., '--dangerously-skip-permissions' for Claude Code)"
         },
-        "terminalgrid.claudeCode.skipPermissions": {
-          "type": "boolean",
-          "default": false,
-          "description": "Launch Claude Code with --dangerously-skip-permissions flag (only use in trusted workspaces)"
+        "terminalgrid.presetArgs": {
+          "type": "object",
+          "default": {},
+          "description": "Optional arguments for each preset. Example: {\"claude-code\": \"--dangerously-skip-permissions\", \"aider\": \"--auto-commits\"}",
+          "additionalProperties": {
+            "type": "string"
+          }
         },
         "terminalgrid.autoConfigureOnInstall": {
           "type": "boolean",
